[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiwan-vacation-date"
version = "1.0.0"
description = "Generate optimal Taiwan vacation travel dates by calculating personal leave days required around public holidays."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Devan Hsu", email = "devanboy@gmail.com"}
]
keywords = ["taiwan", "vacation", "holiday", "calendar", "travel", "leave"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/devanboy/taiwan-vacation-date"
Repository = "https://github.com/devanboy/taiwan-vacation-date"
Issues = "https://github.com/devanboy/taiwan-vacation-date/issues"

[tool.setuptools]
py-modules = ["taiwan_vacation_date"]
